--- a/Labs/Lab2/575076880Lab2/575076880Lab2.cbp
+++ b/Labs/Lab2/575076880Lab2/575076880Lab2.cbp
@@ -32,6 +32,7 @@
 			<Add option="-Wall" />
 			<Add option="-fexceptions" />
 		</Compiler>
+		<Unit filename="../TroPseudo" />
 		<Unit filename="../gameboard.cpp" />
 		<Unit filename="../gameboard.h" />
 		<Unit filename="main.cpp" />
