--- a/Labs/Lab4/makefile
+++ b/Labs/Lab4/makefile
@@ -1,3 +1,35 @@
+#/************************************************************************
+# Design Unit  : Lab4
+
+# File Name    : makefile
+
+# Purpose      : makefile for Testapp for BST
+
+# Note         :
+
+# Limitations  :
+
+# Errors       : none known
+
+# Modules      :
+
+# Dependences  : none
+
+# Author       : David Burneau, Vancouver Island University
+
+# System       : G++ (Linux)
+
+#------------------------------------------------------------------
+# Revision List
+# Version      Author  Date    Changes
+# 1.0          DB      Sep 29  New version
+#*************************************************************************/
+# master Makefile for testapp program for bst
+
+# Make targets:
+#   make		-- creates testapp program
+#   make testapp	-- creates testapp program
+#   make clean		-- removes all .o files and the executable
 
 testapp:	testapp.o bst.o
 	g++ -o testapp testapp.o bst.o
